Fix dark mode button place (#124)
This will replace dark mode from top to bottom.

--- a/popup.css
+++ b/popup.css
@@ -58,7 +58,7 @@ svg {
 .dark-light {
   background-color: var(--dark-light-color);
   position: fixed;
-  top: 15px;
+  bottom: 15px;
   right: 15px;
   padding: 8px;
   border-radius: 50%;
